# pecs

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: entity.hpp.316F8FFA83167573.idx  main.cpp.147D62CE9CEBDBAC.idx  main.cpp.D5C787BC4407B265.idx  pecs.cpp.CDD94B55EDD6B358.idx  pecs.cpp.E1E601DD57DA7C6F.idx  pecs.hpp.1E16DEF315C64F47.idx  pecs.hpp.2F1994172833307B.idx  precs.cpp.4E044E9E759DB479.idx  precs.hpp.AC28B3C6366960E3.idx
include/: pecs.hpp  world.hpp
include/config/: config.hpp
include/container/: sparse_set.hpp
include/entity/: command.hpp  component.hpp  entity.hpp  resource.hpp  system.hpp  world.hpp
sandbox/: CMakeLists.txt  main.cpp
src/: pecs.cpp
src/entity/: world.cpp
test/: CMakeLists.txt  main.cpp
